Apply suggestions from code review
Co-authored-by: mmahacek <mmahacek@opennms.com>

--- a/docs/modules/operation/pages/deep-dive/alarms/alarm-example.adoc
+++ b/docs/modules/operation/pages/deep-dive/alarms/alarm-example.adoc
@@ -1,5 +1,5 @@
 
-= Single alarm tracking problem states
+= Alarm Lifecycle
 
 An alarm is generated on the first occurrence of a `service-down` problem:
 
