NMS-14884: Replace PASSWORD-CLEAR with PASSWORD_CLEAR

--- a/docs/modules/reference/pages/service-assurance/monitors/JmxMonitor.adoc
+++ b/docs/modules/reference/pages/service-assurance/monitors/JmxMonitor.adoc
@@ -31,7 +31,7 @@ The monitor offers the following functionalities:
 | from jmx-config.xml
 
 | factory
-| Set this to PASSWORD-CLEAR if credentials are required.
+| Set this to PASSWORD_CLEAR if credentials are required.
 | STANDARD
 
 | protocol
