--- a/docs/modules/operation/pages/deep-dive/flows/sentinel/ipfix.adoc
+++ b/docs/modules/operation/pages/deep-dive/flows/sentinel/ipfix.adoc
@@ -7,7 +7,8 @@ config:property-set adapters.0.class-name org.opennms.netmgt.telemetry.protocols
 config:update
 ----
 
-<1> Queue name from which Sentinel will fetch messages. The Minion parser name for IPFIX must match this name.
+<1> Queue name from which Sentinel will fetch messages.
+The Minion parser name for IPFIX must match this name.
 By default, for {page-component-title} components, the queue name convention is `IPFIX`.
 <2> Set a name for the IPFIX adapter.
 <3> Assign an adapter to enrich IPFIX messages.
