--- a/docs/modules/operation/pages/deep-dive/flows/data-collection.adoc
+++ b/docs/modules/operation/pages/deep-dive/flows/data-collection.adoc
@@ -1,5 +1,5 @@
 [[ga-flow-support-data-collection]]
-= Data collection of flow applications
+= Data Collection of Flow Applications
 
 Flows are categorized in applications using the <<deep-dive/flows/classification-engine.adoc#ga-flow-support-classification-engine, Classification Engine>>.
 OpenNMS supports summing up the bytesIn/bytesOut data of flow records based on these flow applications and the collection of this data.
