--- a/docs/modules/operation/pages/deep-dive/flows/sentinel/ipfix.adoc
+++ b/docs/modules/operation/pages/deep-dive/flows/sentinel/ipfix.adoc
@@ -1,20 +1,20 @@
 [source, karaf]
 ----
-config:edit --alias ipfix --factory org.opennms.features.telemetry.listeners
+config:edit --alias ipfix --factory org.opennms.features.telemetry.adapters
 config:property-set name IPFIX<1>
 config:property-set adapters.0.name IPFIX-Adapter<2>
 config:property-set adapters.0.class-name org.opennms.netmgt.telemetry.protocols.netflow.adapter.ipfix.IpfixAdapter<3>
 config:update
 ----
-
 <1> Queue name from which Sentinel will fetch messages.
+The Minion parser name for IPFIX must match this name.
 By default, for {page-component-title} components, the queue name convention is `IPFIX`.
 <2> Set a name for the IPFIX adapter.
 <3> Assign an adapter to enrich IPFIX messages.
 
 The configuration is persisted with the suffix specified as alias in `etc/org.opennms.features.telemetry.adapters-ipfix.cfg`.
 
-TIP: To process multiple protocols, increase the index `0` in the adapters name and class name accordingly for additional protocols.
+TIP: When processing multiple protocols from the same queue, include additional adapters by adding additional `name` and `class-name` properties, increasing the index `0` for each pair.
 
 .Run health-check to verify adapter configuration
 [source, karaf]
@@ -30,4 +30,3 @@ Verifying the health of the container
 ...
 Verifying Adapter IPFIX-Adapter (org.opennms.netmgt.telemetry.protocols.netflow.adapter.ipfix.IpfixAdapter)   [ Success  ]
 ----
-
