--- a/docs/modules/operation/pages/deep-dive/flows/distributed.adoc
+++ b/docs/modules/operation/pages/deep-dive/flows/distributed.adoc
@@ -21,7 +21,7 @@ Make sure you do the following:
 This example enables a generic listener for the NetFlow v5 protocol on Minion.
 
 IMPORTANT: NetFlow v5 uses the generic UDP listener, but other protocols require a specific listener.
-See the examples in `$OPENNMS_HOME/etc/telemetryd-configuration.xml`, or <<reference:telemetryd/listeners/introduction.adoc#ref-listener, Telemetryd Listener Reference>> for details.
+See the examples in `$\{OPENNMS_HOME}/etc/telemetryd-configuration.xml`, or <<reference:telemetryd/listeners/introduction.adoc#ref-listener, Telemetryd Listener Reference>> for details.
 
 To enable and configure a listener for NetFlow v5 on Minion, connect to the Karaf Console and set the following properties:
 
@@ -36,7 +36,7 @@ config:property-set parsers.0.class-name org.opennms.netmgt.telemetry.protocols.
 config:update
 ----
 
-TIP: If using a configuration management, you can create and use the properties file as startup configuration in `$MINION_HOME/etc/org.opennms.features.telemetry.listeners-udp-8877.cfg`.
+TIP: If using a configuration management, you can create and use the properties file as startup configuration in `$\{MINION_HOME}/etc/org.opennms.features.telemetry.listeners-udp-8877.cfg`.
 
 [source, properties]
 ----
