--- a/docs/modules/operation/pages/deep-dive/flows/sentinel/message-broker/kafka.adoc
+++ b/docs/modules/operation/pages/deep-dive/flows/sentinel/message-broker/kafka.adoc
@@ -39,8 +39,9 @@ config:property-set location SENTINEL<1>
 config:property-set id 00000000-0000-0000-0000-000000ddba11<2>
 config:update
 ----
-<1> A location string is used to assign the Sentinel to a monitoring location. This can be an existing location or a new location and does not impact the messages that this Sentinel will process.
-<2> Unique identifier you define to be used as a node label for monitoring the Sentinel instance within {page-component-title}.
+<1> A location string is used to assign the Sentinel to a monitoring location.
+This can be an existing location or a new location and does not impact the messages that this Sentinel will process.
+<2> Unique identifier you define to use as a node label for monitoring the Sentinel instance within {page-component-title}.
 This can be a GUID or a hostname.
 
 .Configure Sentinel as Kafka consumer for flow messages
