--- a/docs/modules/deployment/pages/sentinel/runtime/install.adoc
+++ b/docs/modules/deployment/pages/sentinel/runtime/install.adoc
@@ -13,14 +13,14 @@
 
 * Linux physical server or a virtual machine running a supported Linux operating system
 * Internet access to download the installation packages
-* Ensure DNS is configured so that `localhost` and your servers host name are resolved properly
+* Ensure DNS is configured so that `localhost` and your server's host name are resolved properly
 * {page-component-title} Core instance runs on latest stable release
 * Java {compatible-javajdk} is installed
 * System user with administrative permissions (`sudo`) to perform the installation tasks
 ifeval::["{page-component-title}" == "Horizon"]
 +
 NOTE: If you run Debian, you may have to install and configure `sudo` yourself.
-A guide can be found in the link:https://wiki.debian.org/sudo/[Debian Wiki].
+See https://wiki.debian.org/sudo/[Debian Wiki] for guidance.
 endif::[]
 
 include::../../time-sync.adoc[]
@@ -84,7 +84,7 @@ endif::[]
 ====
 
 TIP: Password or encryption algorithm changes happen immediately.
-It is not required to restart the Sentinel
+It is not required to restart the Sentinel.
 
 TIP: By default the Karaf Shell is restricted to 127.0.0.1.
 If you want enable remote access, set `sshHost=0.0.0.0` in `org.apache.karaf.shell.cfg`.
