--- a/docs/modules/operation/pages/deep-dive/flows/sentinel/netflow9.adoc
+++ b/docs/modules/operation/pages/deep-dive/flows/sentinel/netflow9.adoc
@@ -6,7 +6,8 @@ config:property-set adapters.0.name Netflow-9-Adapter<2>
 config:property-set adapters.0.class-name org.opennms.netmgt.telemetry.protocols.netflow.adapter.netflow9.Netflow9Adapter<3>
 config:update
 ----
-<1> Queue name from which Sentinel will fetch messages. The Minion parser name for Netflow v9 must match this name.
+<1> Queue name from which Sentinel will fetch messages.
+The Minion parser name for Netflow v9 must match this name.
 By default, for {page-component-title} components, the queue name convention is `Netflow-9`.
 <2> Set a name for the Netflow v9 adapter.
 <3> Assign an adapter to enrich Netflow v9 messages.
