--- a/docs/modules/operation/pages/deep-dive/flows/sentinel/sflow.adoc
+++ b/docs/modules/operation/pages/deep-dive/flows/sentinel/sflow.adoc
@@ -6,7 +6,8 @@ config:property-set adapters.0.name SFlow-Adapter<2>
 config:property-set adapters.0.class-name org.opennms.netmgt.telemetry.protocols.sflow.adapter.SFlowAdapter<3>
 config:update
 ----
-<1> Queue name from which Sentinel will fetch messages. The Minion parser name for sFlow must match this name.
+<1> Queue name from which Sentinel will fetch messages.
+The Minion parser name for sFlow must match this name.
 By default, for {page-component-title} components, the queue name convention is `SFlow`.
 <2> Set a name for the sFlow adapter.
 <3> Assign an adapter to enrich sFlow messages.
