NMS-15713: Update docs to capture additional details on BMP config
NMS-15713: Update docs to capture additional details on BMP config - the content listed in the ticket was already documented, but the heading for the Sentinel section was incorrect, so the section was not apparent. Updated the heading.

--- a/docs/modules/reference/pages/telemetryd/protocols/bmp.adoc
+++ b/docs/modules/reference/pages/telemetryd/protocols/bmp.adoc
@@ -234,7 +234,7 @@ config:property-set rpkiUrl http://localhost:8080/api/export.json
 config:update
 ----
 
-==== Running BMP Adapter on Sentinel
+=== Running BMP Adapter on Sentinel
 
 BMP Persisting Adapter can also run on Sentinel.
 Sentinel must start the appropriate BMP adapter.
