--- a/docs/modules/operation/pages/deep-dive/alarms/alarm-sound-flash.adoc
+++ b/docs/modules/operation/pages/deep-dive/alarms/alarm-sound-flash.adoc
@@ -62,3 +62,4 @@ NOTE: If `alarm.properties` does not exist, create it and specify the above sett
 
 The sound that is played is determined by the contents of `$\{OPENNMS_HOME}/jetty-webapps/opennms/sounds/alert.wav`.
 To change the alarm sound, create a new `.wav` file with the desired sound, name it `alert.wav`, and replace the default file in `$\{OPENNMS_HOME}/jetty-webapps/opennms/sounds/`.
+Make sure too keep a copy of this file as it may be overwritten to the default sound while installing updates to {page-component-title}.
