--- a/docs/modules/reference/pages/glossary.adoc
+++ b/docs/modules/reference/pages/glossary.adoc
@@ -62,7 +62,7 @@ https://docs.docker.com/[Docker]:: An open-source container virtualization servi
 Dominion:: The service on a {page-component-title} instance that controls Minion operations (see xref:reference:configuration/minion-confd/minion-confd.adoc[]).
 
 https://www.drools.org/[Drools]:: A system to manage business rules that supports the Java Rules Engine API standard.
-It helps provide a more robust infrastructure for workflow and problem state management in alarmd (see xref:operation:deep-dive/alarms/alarmd.adoc[]).
+It helps provide a more robust infrastructure for workflow and problem state management in alarmd (see xref:operation:deep-dive/alarms/introduction.adoc[]).
 
 == E
 
