NMS-15713: Update docs to capture additional details on BMP config
Split bmp.adoc file into multiple smaller files as per reviewer feedback.

--- a/docs/modules/reference/nav.adoc
+++ b/docs/modules/reference/nav.adoc
@@ -98,7 +98,13 @@
 *** xref:telemetryd/listeners/tcp.adoc[]
 *** xref:telemetryd/listeners/udp.adoc[]
 ** xref:telemetryd/protocols/introduction.adoc[]
-*** xref:telemetryd/protocols/bmp.adoc[]
+*** xref:telemetryd/protocols/bmp/bmp.adoc[]
+**** xref:telemetryd/protocols/bmp/parser.adoc[]
+**** xref:telemetryd/protocols/bmp/minion.adoc[]
+**** xref:telemetryd/protocols/bmp/adapter.adoc[]
+**** xref:telemetryd/protocols/bmp/peer-status.adoc[]
+**** xref:telemetryd/protocols/bmp/integration-adapter.adoc[]
+**** xref:telemetryd/protocols/bmp/persisting-adapter.adoc[]
 *** xref:telemetryd/protocols/nxos.adoc[]
 *** xref:telemetryd/protocols/graphite.adoc[]
 *** xref:telemetryd/protocols/ipfix.adoc[]
