--- a/docs/modules/operation/pages/deep-dive/alarms/history.adoc
+++ b/docs/modules/operation/pages/deep-dive/alarms/history.adoc
@@ -3,7 +3,7 @@
 = Alarm History
 
 Alarms are deleted from the {page-component-title} database as they clear or become stale.
-If you would like to keep a historical record of alarm data, you can enable the alarm history feature to provide long-term storage and maintain a history of alarm state changes in Elasticsearch.
+If you would like to keep an historical record of alarm data, you can enable the alarm history feature to provide long-term storage and maintain a history of alarm state changes in Elasticsearch.
 When it is enabled, alarms are indexed in Elasticsearch when they are created, deleted, or when any interesting fields (for example, Ticket State, Sticky Memo) on the alarm are updated.
 Alarms are indexed so that operators can answer the following questions:
 
