--- a/docs/modules/deployment/pages/core/message-broker/kafka.adoc
+++ b/docs/modules/deployment/pages/core/message-broker/kafka.adoc
@@ -19,12 +19,11 @@ org.opennms.core.ipc.kafka.bootstrap.servers=my-kafka-ip-1:9092,my-kafka-ip-2:90
 <4> Connect to the following Kafka nodes and adjust the IPs or FQDNs with the Kafka port (9092) accordingly.
 
 NOTE: If you set more than one Kafka node as `bootstrap.servers`, the driver attempts to connect to the first entry.
-      If that is successful, the client discovers and knows the whole broker topology.
-      The other entries are used only if the connection to the first entry fails.
+If that is successful, the client discovers and knows the whole broker topology.
+The other entries are used only if the connection to the first entry fails.
 
 Any valid Kafka configuration property can be set with the `org.opennms.core.ipc.kafka` prefix.
-      An example using SASL/SCRAM with TLS:
-
+.Example config using SASL/SCRAM with TLS.
 [source, kafka.properties]
 ----
 org.opennms.core.ipc.strategy=kafka
@@ -36,7 +35,7 @@ org.opennms.core.ipc.kafka.sasl.jaas.config=org.apache.kafka.common.security.scr
 ----
 
 NOTE: You can set module-specific config for modules `sink`, `rpc`, and `twin` with prefixes `org.opennms.core.ipc.sink.kafka`, `org.opennms.core.ipc.rpc.kafka`, and `org.opennms.core.ipc.twin.kafka`, respectively.
-      Module-specific config takes precedence over common config with prefix `org.opennms.core.ipc.kafka`.
+Module-specific config takes precedence over common config with prefix `org.opennms.core.ipc.kafka`.
 
 NOTE: {page-component-title} Core requires the Kafka broker configuration option `auto.create.topics.enable` to be set to `true`.
 
