--- a/docs/modules/reference/pages/service-assurance/monitors/MinaSshMonitor.adoc
+++ b/docs/modules/reference/pages/service-assurance/monitors/MinaSshMonitor.adoc
@@ -42,7 +42,8 @@ The xref:service-assurance/monitors/SshMonitor.adoc[SshMonitor] only tests that 
 | n/a
 
 | remote-command
-| A command to execute after authentication is successful on the node. The output is ignored, and any execution errors will mark the service as down.
+| A command to execute after authentication is successful on the node.
+The output is ignored, and any execution errors will mark the service as down.
 | n/a
 
 | port
