NMS-15584: Update to alarm docs (#6033)
* NMS-15584: Some improvements in the docs are required to answer the following questions

* Apply suggestions from code review

Co-authored-by: Bonrob2 <59453630+Bonrob2@users.noreply.github.com>

* NMS:15584: fix alarm into link

* Apply suggestions from code review

Co-authored-by: mmahacek <mmahacek@opennms.com>

* Update docs/modules/operation/pages/deep-dive/alarms/alarm-handling.adoc

Co-authored-by: mmahacek <mmahacek@opennms.com>

* Added the missing screenshots

* NMS-15584: Alarm doc updates

* Apply suggestions from code review

Co-authored-by: Bonrob2 <59453630+Bonrob2@users.noreply.github.com>

---------

Co-authored-by: Bonrob2 <59453630+Bonrob2@users.noreply.github.com>
Co-authored-by: Mark Mahacek <mmahacek@opennms.com>

--- a/docs/modules/operation/pages/deep-dive/alarms/history.adoc
+++ b/docs/modules/operation/pages/deep-dive/alarms/history.adoc
@@ -2,7 +2,8 @@
 [[ga-alarm-history]]
 = Alarm History
 
-The alarm history feature integrates with Elasticsearch to provide long-term storage and maintain a history of alarm state changes.
+Alarms are deleted from the {page-component-title} database as they clear or become stale.
+If you would like to keep an historical record of alarm data, you can enable the alarm history feature to provide long-term storage and maintain a history of alarm state changes in Elasticsearch.
 When it is enabled, alarms are indexed in Elasticsearch when they are created, deleted, or when any interesting fields (for example, Ticket State, Sticky Memo) on the alarm are updated.
 Alarms are indexed so that operators can answer the following questions:
 
