--- a/docs/modules/operation/pages/deep-dive/alarms/introduction.adoc
+++ b/docs/modules/operation/pages/deep-dive/alarms/introduction.adoc
@@ -3,43 +3,7 @@
 
 {page-component-title} uses a network's managed entities, their resources, the services they provide, and any applications that they host to monitor problem states.
 
-While events carry immutable problem state attributes such as severity, alarms indicate problems in the network (see xref:deep-dive/bsm/introduction.adoc[]) and carry changeable attributes such as acknowledgment.
+While events are immutable, historical records of things that happen within {page-component-title} and the nodes it monitors, alarms are created from one or more events that are <<deep-dive/alarms/configuring-alarms.adoc#ga-configure-alarms, configured>> with `<alarm-data>` information.
+These are used to indicate problems in the network and carry changeable attributes such as acknowledgment, clearing, escalation, or temporary and persisted notes.
 
-== Single alarm tracking problem states
-
-An alarm is instantiated on the first occurrence of a `service-down` problem:
-
-.`service-down` alarm created
-image::alarms/single_alarm_1.png["Alarm List displaying one alarm of minor severity"]
-
-Click the number displayed in the *Count* column to display the corresponding events and their details:
-
-.Alarm displaying service down event
-image::alarms/single_alarm_2.png["Alarm Details page displaying a service down event"]
-
-The alarm is cleared immediately when service is restored, and no alarm is created when the service returns to a normal state:
-
-.Alarm cleared
-image::alarms/single_alarm_3.png["Alarm List displaying one cleared alarm and its log message"]
-
-.Service down and service restored events
-image::alarms/single_alarm_4.png["Alarm Details page displaying one service down event and one service restored event"]
-
-If the problem occurs again, the events are reduced into the existing alarm.
-The alarm's count is updated to reflect the new activity:
-
-.Reduced alarm
-image::alarms/single_alarm_5.png["Alarm List displaying one alarm with a count of 2"]
-
-.List of events
-image::alarms/single_alarm_6.png["Detailed event list page displaying two service down events and one service restored event, all of which are members of the same alarm"]
-
-The alarm is once again cleared immediately when service is restored:
-
-.Reduced alarm cleared
-image::alarms/single_alarm_7.png["Alarm List displaying one cleared alarm with a count of 2, and its log message"]
-
-Note that the alarm's count does not increment when the problem is resolved.
-
-.Service down and restored events
-image::alarms/single_alarm_8.png["Detailed event list page displaying two service down events and two service restored events, all of which are members of the same alarm"]
+Alarms provide fault management information regarding problems in your network.
