--- a/opennms-assemblies/minion/src/main/filtered/debian/changelog
+++ b/opennms-assemblies/minion/src/main/filtered/debian/changelog
@@ -1,3 +1,12 @@
+opennms-minion (32.0.0-1) stable; urgency=medium
+
+  * Major release, with a number of new features and bug fixes.
+
+    For details on what has changed, see:
+    https://docs.opennms.com/horizon/32.0.0/index.html
+
+ -- OpenNMS Release Manager <opennms@opennms.org>  Tue, 27 Jun 2023 12:33:00 -0400
+
 opennms-minion (31.0.9-1) stable; urgency=medium
 
   * Minor release containing several bug fixes and enhancements.
